--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         function DisplayCacheProgress(){setTimeout(function(){;document.title="Cache Success !";},1000);setTimeout(function(){window.location.href = document.referrer;},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
     </script>
     <meta charset="UTF-8">
-    <title>محمد خالد | 9.00</title>
+    <title>  مركز الريان 9.00</title>
     <link rel='stylesheet' href='./css/index.css'>
   </head>
   <body>
@@ -19,7 +19,7 @@
     </div>
 
     <div class="header">
-      <div class="header-title">محمد خالد</div>
+      <div class="header-title"> مركز الريان</div>
     </div>
 
     <pre id="update-results" style="white-space: pre-wrap; margin-top: 10px;"></pre>
@@ -102,9 +102,9 @@
     <!-- About Popup -->
     <div class="overlay" id="overlay-popup"></div>
     <div class="popup" id="about-popup">
-      <h2>مرحبا بكم قناه محمد خالد للشروحات</h2>
+      <h2>مرحبا مركز الريان</h2>
       <p>Version: 9.00</p>
-      <p>صفه خاصه بتعديل بلي 4 نظام 9.</p>
+      <p>صفحه خاصه بتعديل بلي 4 نظام 9.</p>
       <button  onclick="closeabout()" close-btn" id="close-about">Close</button>
     </div>
 
